Refactoring using FindBugs